--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    テストです 
-    11/19 入力
+    <div class="pronavi">
+        <h1>プロナビとは</h1>
+        <h2>6ヶ月集中のプログラミングスクールです</h2>
+        <p>プロナビは「プログラミングで変わりたい」と思っているあなたを全力でサポートするプログラミングスクールです。<br>
+            あなたに合わせた“あなただけの学習プラン”をともに作成し、目標達成に向けて選任コーチがあなたをサポートします。<br><br>
+
+            “未来を変える”ということは決して簡単なことではありません。<br>
+            時には気持ちが折れそうになってしまうこともあるでしょう。<br>
+            ですが、プロナビではともに挑戦をする沢山の仲間と繋がれます。あなたを１人にすることはありません。<br><br>
+
+            プロナビのゴールは<br>
+            勇気を出してはじめの一歩を踏み出してくれるあなたを<br>
+            プロナビでお待ちしています。<br>
+            nazedarou
+        </p>
+    </div>
 </body>
 </html>
