ヘッダー作成

--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
 
 <body>
     <header>
+        <div class="header-left">
+            <h1><img src="img/logo.png" alt="PRONAVIロゴ"></h1>
+        </div>
+        <div class="header-right">
+            <nav>
+                <ul>
+                    <li>プロナビとは</li>
+                    <li>プロナビの強み</li>
+                    <li>受講生の声</li>
+                    <li>受講の流れ</li>
+                    <li>料金/期間</li>
+                    <li>よくある質問</li>
+                    <li>会社概要</li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
