1よくある質問・強み・js（アコーディオン）追記　2共通css一部追記

--- a/index.html
+++ b/index.html
@@ -49,6 +49,105 @@
     </header>
 
     <main>
+
+
+
+        <section id="strong-point" class="strong-point">
+            <div class="section-title">
+                プロナビの<span>4</span>つの<span>強</span>み
+            </div>
+            <div class="wrapper sp-content">
+                <ul class="sp-list">
+                    <li class="sp-single">
+                        <p class="number">01</p>
+                        <p class="text">学習環境</p>
+                        <img src="/img/strong-point1.png" alt="strong-point1">
+                        <a class="sp-btn 01" href="#">詳しく見る→</a>
+                    </li>
+                    <li class="sp-single">
+                        <p class="number">02</p>
+                        <p class="text">作業会</p>
+                        <img src="/img/strong-point2.png" alt="strong-point2">
+                        <a class="sp-btn 02" href="#">詳しく見る→</a>
+                    </li>
+                    <li class="sp-single">
+                        <p class="number">03</p>
+                        <p class="text">イベント</p>
+                        <img src="/img/strong-point3.png" alt="strong-point3">
+                        <a class="sp-btn 03" href="#">詳しく見る→</a>
+                    </li>
+                    <li class="sp-single">
+                        <p class="number">04</p>
+                        <p class="text">案件獲得サポート</p>
+                        <img src="/img/strong-point4.png" alt="strong-point4">
+                        <a class="sp-btn 04" href="#">詳しく見る→</a>
+                    </li>
+                </ul>
+
+                <div class="sp-apply">
+                    <a href="#" class="contact-btn">無料カウンセリングを申し込む</a>
+                </div>
+
+                <div class="sp-movie">
+                    <a href="https://www.youtube.com/watch?v=0Te2W50okgM&t=1s" class="movie-btn" target="_blank">
+                        プロナビについてTVで紹介されました！<br>
+                        外部リンク(Youtube)
+                    </a>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+        <section id="question" class="question">
+            <div class="section-title">
+                よくある質問
+            </div>
+            <div class="wrapper q-and-a">
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>まったくの未経験でも受講できますか？</li>
+                    <li class="list-answer"><span>A</span>はい、未経験の方でも安心して学べるよう、基礎から丁寧にサポートします。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>どの言語を学べますか？</li>
+                    <li class="list-answer"><span>A</span>HTML/CSS/JavaScriptなど、HP制作に必要な基礎を学べます。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>オンラインでも受講できますか？</li>
+                    <li class="list-answer"><span>A</span> はい、すべてオンラインで完結します。パソコンとネット環境があればどこでも受講可能です。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>授業の時間は固定ですか？</li>
+                    <li class="list-answer"><span>A</span>いいえ、個別指導を採用しているため、ご自身のペースで学習できます。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>パソコンは必要ですか？</li>
+                    <li class="list-answer"><span>A</span>はい。基本的にはパソコンでの学習を推奨しています。必要なスペックは事前にご案内します。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>途中で挫折しないか心配です。</li>
+                    <li class="list-answer"><span>A</span>専属メンターが進捗管理・質問対応を行い、最後までやり遂げられる仕組みを整えています。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>支払い方法はどのようなものがありますか？</li>
+                    <li class="list-answer"><span>A</span>クレジットカード・銀行振込・分割払いなど、複数の支払い方法に対応しています。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>社会人でも受講できますか？</li>
+                    <li class="list-answer"><span>A</span> はい、多くの社会人の方が仕事の合間に受講しています。夜間・休日の学習も可能です。</li>
+                </ul>
+                <ul class="q-and-a-list">
+                    <li class="list-question"><span>Q</span>受講前に相談や体験はできますか？</li>
+                    <li class="list-answer"><span>A</span> はい。無料カウンセリングや体験レッスンをご用意しています。お気軽にお申し込みください。</li>
+                </ul>
+                
+                
+            </div>
+        </section>
+
+
     </main>
 
 
