強みimg-pageのbtn作成

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                     <button class="close-btn">×</button>
                     <p class="number">02</p>
                     <p class="text">作業会</p>
+                    <div id="small-page-img-animation">
+                        <button class="small-page-img" data-target="page5">→作業会の様子はこちら←</button>
+                    </div>
                     <div class="small-page">
                         <div class="small-content">
                             <h4>作業会</h4>
@@ -145,6 +148,9 @@
                     <button class="close-btn">×</button>
                     <p class="number">03</p>
                     <p class="text">イベント</p>
+                    <div id="small-page-img-animation">
+                        <button class="small-page-img" data-target="page5">→イベントの様子はこちら←</button>
+                    </div>
                     <div class="small-page">
                         <div class="small-content">
                             <h4>オフ会</h4>
@@ -198,10 +204,9 @@
                         </div>
                     </div>
                 </div>
-                
+<!-- 専用ページここまで -->
 
-                
-<!-- 専用ページ -->
+
                 <div class="sp-apply">
                     <a href="#" class="contact-btn">無料カウンセリングを申し込む</a>
                 </div>
