Fix: remove DS_Store conflict and update changes

--- a/index.html
+++ b/index.html
@@ -270,6 +270,132 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <img src="img/wave-top.png" alt="" class="wave-top">
+    <section class="voice">
+        <div class="wrapper-voice">
+            <h2 class="section-title">受講者の声</h2>
+            <div class="voice-slider">
+                <div class="voice-item">
+                    <img src="img/voice1.png">
+                    <div class="voice-text">
+                        <p>他スクールからプロナビへ!</p>
+                        <div class="voice-info">
+                            <span>20代女性</span>
+                            <span>卒業生</span>
+                        </div>
+                        <p>他スクールを受講したのち、結果を残したいとプロナビへ入会。<br>
+                            5ヶ月で案件を獲得。<br>
+                            現在はフリーランスとして案件をこなしながら活躍中。</p>
+                    </div>
+                </div>
+                <div class="voice-item">
+                    <img src="img/voice2.png">
+                    <div class="voice-text">
+                        <p>消防士からフリーランスへ!</p>
+                        <div class="voice-info">
+                            <span>20代男性</span>
+                            <span>卒業生</span>
+                        </div>
+                        <p>家族との時間を大切にしたいという想いから、未経験でパソコン購入の段階から学習をスタート。<br>
+                            約5ヶ月で初案件を獲得。<br>
+                            現在はフリーランスとして活動しながら講師としても活躍中。</p>
+                    </div>
+                </div>
+                <div class="voice-item">
+                    <img src="img/voice3.png    ">
+                    <div class="voice-text">
+                        <p>将来を見据えて在宅スキルを</p>
+                        <div class="voice-info">
+                            <span>30代女性</span>
+                            <span>在校生</span>
+                        </div>
+                        <p>看護師として不規則勤務が続く中、将来の働き方を見据えて在宅で働けるスキルを求めプロナビへ。<br>
+                            講師のサポートもあり挫折することなくカリキュラムを完了し、案件獲得も達成。</p>
+                    </div>
+                </div>
+                <div class="voice-item">
+                    <img src="img/voice4.png">
+                    <div class="voice-text">
+                        <p>挫折からの再スタート！</p>
+                        <div class="voice-info">
+                            <span>30代男性</span>
+                            <span>在校生</span>
+                        </div>
+                        <p>最初に通ったスクールでは挫折してしまったが、「Webアプリを作りたい」という思いでプロナビへ。<br>
+                            同じ志を持つ仲間とも出会い、刺激を受けながら学習を継続。<br>
+                            現在はオリジナルサイトを制作中。</p>
+                    </div>
+                </div>
+                <div class="voice-item">
+                    <img src="img/voice1.png">
+                    <div class="voice-text">
+                        <p>家族との時間を増やすため</p>
+                        <div class="voice-info">
+                            <span>20代女性</span>
+                            <span>卒業生</span>
+                        </div>
+                        <p>子どもが生まれたことをきっかけに、家族の時間を大切にできる働き方へシフトしたいと育休中に学習を開始。<br>
+                            手厚いサポートに支えられながら、前向きにカリキュラムに取り組めています。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="collection">
+        <h2 class="section-title">作品集</h2>
+        <div class="wrapper-collection">
+            <ul class="collection-slider">
+                <li><img src="img/portfolio1.png" alt=""></li>
+                <li><img src="img/portfolio2.png" alt=""></li>
+                <li><img src="img/portfolio3.png" alt=""></li>
+                <li><img src="img/portfolio4.png" alt=""></li>
+                <li><img src="img/portfolio4.png" alt=""></li>
+            </ul>
+            <div class="view-more-btn">
+                <a href="https://pronavi-board.noe-p.com/" target="_blank">もっと見る</a>
+            </div>
+        </div>
+    </section>
+    <img src="img/wave-bottom.png" alt="" class="wave-bottom">
+
+    <section class="flow">
+        <h2 class="section-title">受講の流れ</h2>
+
+    </section>
     <footer>
     </footer>
 
