ヘッダー修正

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="css/_11company.css">
     <link rel="stylesheet" href="css/_12footer.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@100..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -33,19 +36,17 @@
         <div class="header-left">
             <h1><img src="img/logo.png" alt="PRONAVIロゴ"></h1>
         </div>
-        <div class="header-right">
-            <nav>
-                <ul>
-                    <li>プロナビとは</li>
-                    <li>プロナビの強み</li>
-                    <li>受講生の声</li>
-                    <li>受講の流れ</li>
-                    <li>料金/期間</li>
-                    <li>よくある質問</li>
-                    <li>会社概要</li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="header-right">
+            <ul>
+                <a href="#プロナビとは"><li>プロナビとは</li></a>
+                <a href="#プロナビの強み"><li>プロナビの強み</li></a>
+                <a href="#受講生の声"><li>受講生の声</li></a>
+                <a href="#受講の流れ"><li>受講の流れ</li></a>
+                <a href="#料金/期間"><li>料金/期間</li></a>
+                <a href="#よくある質問"><li>よくある質問</li></a>
+                <a href="#会社概要"><li>会社概要</li></a>
+            </ul>
+        </nav>
     </header>
 
     <main>
