--- a/index.html
+++ b/index.html
@@ -38,18 +38,55 @@
         </div>
         <nav class="header-right">
             <ul>
-                <a href="#プロナビとは"><li>プロナビとは</li></a>
-                <a href="#プロナビの強み"><li>プロナビの強み</li></a>
-                <a href="#受講生の声"><li>受講生の声</li></a>
-                <a href="#受講の流れ"><li>受講の流れ</li></a>
-                <a href="#料金/期間"><li>料金/期間</li></a>
-                <a href="#よくある質問"><li>よくある質問</li></a>
-                <a href="#会社概要"><li>会社概要</li></a>
+                <a href="#プロナビとは">
+                    <li>プロナビとは</li>
+                </a>
+                <a href="#プロナビの強み">
+                    <li>プロナビの強み</li>
+                </a>
+                <a href="#受講生の声">
+                    <li>受講生の声</li>
+                </a>
+                <a href="#受講の流れ">
+                    <li>受講の流れ</li>
+                </a>
+                <a href="#料金/期間">
+                    <li>料金/期間</li>
+                </a>
+                <a href="#よくある質問">
+                    <li>よくある質問</li>
+                </a>
+                <a href="#会社概要">
+                    <li>会社概要</li>
+                </a>
             </ul>
         </nav>
     </header>
 
     <main>
+        <section id="about" class="about">
+            <div class="section-title">
+                <div class="section-title">プロナビとは</div>
+            </div>
+            <h2>６ヶ月集中のプログラミングスクールです</h2>
+            <div class="about-container wrapper">
+                <div class="about-text">
+                    <p>プロナビは「プログラミングで変わりたい」と思っているあなたを<br>
+                        全力でサポートするプログラミングスクールです。<br>
+                        あなたに合わせた“あなただけの学習プラン”をともに作成し、目標達成に<br>
+                        向けて選任コーチがあなたをサポートします。</p>
+                    <p>“未来を変える”ということは決して簡単なことではありません。<br>
+                        時には気持ちが折れそうになってしまうこともあるでしょう。<br>
+                        ですが、プロナビではともに挑戦をする沢山の仲間と繋がれます。<br>
+                        あなたを１人にすることはありません。</p>
+                    <p>プロナビのゴールは<span>あなたが目標達成した先の未来をともに描くこと</span><br>
+                        勇気を出してはじめの一歩を踏み出してくれるあなたを<br>
+                        プロナビでお待ちしています。</p>
+                </div>
+                <img src="img/about.png" alt="笑顔でパソコンを操作する女性">
+            </div>
+
+        </section>
 
 
 
@@ -275,7 +312,7 @@
                         </div>
                     </div>
                     <div class="voice-item">
-                        <img src="img/voice1.png">
+                        <img src="img/voice5.png">
                         <div class="voice-text">
                             <p>家族との時間を増やすため</p>
                             <div class="voice-info">
@@ -308,7 +345,7 @@
         </section>
         <img src="img/wave-bottom.png" alt="" class="wave-bottom">
 
-        
+
         <section class="flow">
             <h2 class="section-title">受講の流れ</h2>
         </section>
