--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 
 
-        <img src="img/wave-top.png" alt="" class="wave-top">
+        <img src="img/wave-top.png" alt="wave-top" class="wave-top">
         <section class="voice">
             <div class="wrapper-voice">
                 <h2 class="section-title">受講者の声</h2>
@@ -258,7 +258,7 @@
                                 <span>在校生</span>
                             </div>
                             <p>看護師として不規則勤務が続く中、将来の働き方を見据えて在宅で働けるスキルを求めプロナビへ。<br>
-                                講師のサポートもあり挫折することなくカリキュラムを完了し、案件獲得も達成。</p>
+                                講師のサポートもあり挫折することなくカリキュラムを完了し、案件獲得も達成できた。</p>
                         </div>
                     </div>
                     <div class="voice-item">
@@ -277,10 +277,10 @@
                     <div class="voice-item">
                         <img src="img/voice1.png">
                         <div class="voice-text">
-                            <p>家族との時間を増やすため</p>
+                            <p>家族との時間を増やすために</p>
                             <div class="voice-info">
                                 <span>20代女性</span>
-                                <span>卒業生</span>
+                                <span>在校生</span>
                             </div>
                             <p>子どもが生まれたことをきっかけに、家族の時間を大切にできる働き方へシフトしたいと育休中に学習を開始。<br>
                                 手厚いサポートに支えられながら、前向きにカリキュラムに取り組めています。</p>
@@ -295,11 +295,11 @@
             <h2 class="section-title">作品集</h2>
             <div class="wrapper-collection">
                 <ul class="collection-slider">
-                    <li><img src="img/portfolio1.png" alt=""></li>
-                    <li><img src="img/portfolio2.png" alt=""></li>
-                    <li><img src="img/portfolio3.png" alt=""></li>
-                    <li><img src="img/portfolio4.png" alt=""></li>
-                    <li><img src="img/portfolio4.png" alt=""></li>
+                    <li><img src="img/portfolio1.png" alt="collection1"></li>
+                    <li><img src="img/portfolio2.png" alt="collection2"></li>
+                    <li><img src="img/portfolio3.png" alt="collection3"></li>
+                    <li><img src="img/portfolio4.png" alt="collection4"></li>
+                    <li><img src="img/portfolio5.png" alt="collection5"></li>
                 </ul>
                 <div class="view-more-btn">
                     <a href="https://pronavi-board.noe-p.com/" target="_blank">もっと見る</a>
@@ -308,9 +308,61 @@
         </section>
         <img src="img/wave-bottom.png" alt="" class="wave-bottom">
 
-        
+
         <section class="flow">
             <h2 class="section-title">受講の流れ</h2>
+            <div class="wrapper">
+                <div class="flow-inner">
+                    <div class="flow-items">
+                        <div class="flow-item odd-number">
+                            <img src="img/flow1.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>面談</span>
+                                <span>入校 / 手続き</span>
+                                <span>目標設定</span>
+                            </div>
+                        </div>
+                        <div class="flow-item even-number">
+                            <img src="img/flow2.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>Progate</span>
+                                <span>環境構築</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flow-items">
+                        <div class="flow-item odd-number">
+                            <img src="img/flow3.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>模写コーディング</span> <span>目標設定</span>
+                            </div>
+                        </div>
+                        <div class="flow-item even-number">
+                            <img src="img/flow4.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>WordPress</span>
+                                <span>オリジナルサイト
+                                    制作</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flow-items">
+                        <div class="flow-item odd-number">
+                            <img src="img/flow5.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>案件獲得フェーズ</span>                                <span>目標設定</span>
+                            </div>
+                        </div>
+                        <div class="flow-item even-number">
+                            <img src="img/flow6.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>案件獲得</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
 
@@ -400,7 +452,6 @@
 
 
 
-    </section>
     <footer>
     </footer>
 
