--- a/index.html
+++ b/index.html
@@ -69,21 +69,41 @@
                 <div class="section-title">プロナビとは</div>
             </div>
             <h2>６ヶ月集中のプログラミングスクールです</h2>
-            <div class="about-container wrapper">
-                <div class="about-text">
-                    <p>プロナビは「プログラミングで変わりたい」と思っているあなたを<br>
-                        全力でサポートするプログラミングスクールです。<br>
-                        あなたに合わせた“あなただけの学習プラン”をともに作成し、目標達成に<br>
-                        向けて選任コーチがあなたをサポートします。</p>
-                    <p>“未来を変える”ということは決して簡単なことではありません。<br>
-                        時には気持ちが折れそうになってしまうこともあるでしょう。<br>
-                        ですが、プロナビではともに挑戦をする沢山の仲間と繋がれます。<br>
-                        あなたを１人にすることはありません。</p>
-                    <p>プロナビのゴールは<span>あなたが目標達成した先の未来をともに描くこと</span><br>
-                        勇気を出してはじめの一歩を踏み出してくれるあなたを<br>
-                        プロナビでお待ちしています。</p>
+            <div class="wrapper">
+                <div class="about-container">
+                    <div class="about-text">
+                        <p>プロナビは「プログラミングで変わりたい」と思っているあなたを<br>
+                            全力でサポートするプログラミングスクールです。<br>
+                            あなたに合わせた“あなただけの学習プラン”をともに作成し、</p>
+                        <p class="last_line">目標達成に向けて選任コーチがあなたをサポートします。</p>
+
+                        <p>“未来を変える”ということは決して簡単なことではありません。<br>
+                            時には気持ちが折れそうになってしまうこともあるでしょう。<br>
+                            ですが、プロナビではともに挑戦をする沢山の仲間と繋がれます。</p>
+                        <p class="last_line">あなたを１人にすることはありません。</p>
+                        <p>プロナビのゴールは<br>
+                            <span>“あなたが目標達成した先の未来をともに描くこと”</span><br>
+                            勇気を出してはじめの一歩を踏み出してくれるあなたを<br>
+                            プロナビでお待ちしています。
+                        </p>
+                    </div>
+                    <img src="img/about.png" alt="笑顔でパソコンを操作する女性">
+                    </div>
+
+                    <div class="inner">
+                        <img src="img/Pronavi.png" class="back_text" alt="Pronavi">
+                        <div class="emblem-img">
+                            <img src="img/emblem1.png" alt="">
+                            <img src="img/emblem2.png" alt="">
+                            <img src="img/emblem3.png" alt="">
+                            <div class="emblem-text">
+                                <p>信頼の実績が<br>
+                                    あなたの挑戦を支えます</p>
+                            
+                        </div>
+                    </div>
+
                 </div>
-                <img src="img/about.png" alt="笑顔でパソコンを操作する女性">
             </div>
 
         </section>
