--- a/index.html
+++ b/index.html
@@ -50,6 +50,49 @@
     </header>
 
     <main>
+        <section id="about" class="about">
+            <div class="section-title">
+                <div class="section-title">プロナビとは</div>
+            </div>
+            <h2>６ヶ月集中のプログラミングスクールです</h2>
+            <div class="wrapper">
+                <div class="about-container">
+                    <div class="about-text">
+                        <p>プロナビは「プログラミングで変わりたい」と思っているあなたを<br>
+                            全力でサポートするプログラミングスクールです。<br>
+                            あなたに合わせた“あなただけの学習プラン”をともに作成し、</p>
+                        <p class="last_line">目標達成に向けて選任コーチがあなたをサポートします。</p>
+
+                        <p>“未来を変える”ということは決して簡単なことではありません。<br>
+                            時には気持ちが折れそうになってしまうこともあるでしょう。<br>
+                            ですが、プロナビではともに挑戦をする沢山の仲間と繋がれます。</p>
+                        <p class="last_line">あなたを１人にすることはありません。</p>
+                        <p>プロナビのゴールは<br>
+                            <span>“あなたが目標達成した先の未来をともに描くこと”</span><br>
+                            勇気を出してはじめの一歩を踏み出してくれるあなたを<br>
+                            プロナビでお待ちしています。
+                        </p>
+                    </div>
+                    <img src="img/about.png" alt="笑顔でパソコンを操作する女性">
+                    </div>
+
+                    <div class="inner">
+                        <img src="img/Pronavi.png" class="back_text" alt="Pronavi">
+                        <div class="emblem-img">
+                            <img src="img/emblem1.png" alt="">
+                            <img src="img/emblem2.png" alt="">
+                            <img src="img/emblem3.png" alt="">
+                            <div class="emblem-text">
+                                <p>信頼の実績が<br>
+                                    あなたの挑戦を支えます</p>
+                            
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
 
 
 
@@ -84,7 +127,7 @@
                         <button class="sp-btn" data-target="page4">詳しく見る→</button>
                     </li>
                 </ul>
-                <!-- 専用ページ -->
+<!--///// 専用ページ4枚 ここから/////-->
                 <div id="modal-bg"></div>
 
                 <div class="page-modal" id="page1">
@@ -208,7 +251,10 @@
 
 
 
-                <!-- 専用ページ -->
+<!--///// 専用ページ4枚 ここまで /////-->
+<!--///// imgページ2枚 ここから /////-->
+
+<!--///// imgページ2枚 ここまで /////-->
                 <div class="sp-apply">
                     <a href="#" class="contact-btn">無料カウンセリングを申し込む</a>
                 </div>
@@ -224,7 +270,7 @@
 
 
 
-        <img src="img/wave-top.png" alt="" class="wave-top">
+        <img src="img/wave-top.png" alt="wave-top" class="wave-top">
         <section class="voice">
             <div class="wrapper-voice">
                 <h2 class="section-title">受講者の声</h2>
@@ -264,7 +310,7 @@
                                 <span>在校生</span>
                             </div>
                             <p>看護師として不規則勤務が続く中、将来の働き方を見据えて在宅で働けるスキルを求めプロナビへ。<br>
-                                講師のサポートもあり挫折することなくカリキュラムを完了し、案件獲得も達成。</p>
+                                講師のサポートもあり挫折することなくカリキュラムを完了し、案件獲得も達成できた。</p>
                         </div>
                     </div>
                     <div class="voice-item">
@@ -283,10 +329,10 @@
                     <div class="voice-item">
                         <img src="img/voice1.png">
                         <div class="voice-text">
-                            <p>家族との時間を増やすため</p>
+                            <p>家族との時間を増やすために</p>
                             <div class="voice-info">
                                 <span>20代女性</span>
-                                <span>卒業生</span>
+                                <span>在校生</span>
                             </div>
                             <p>子どもが生まれたことをきっかけに、家族の時間を大切にできる働き方へシフトしたいと育休中に学習を開始。<br>
                                 手厚いサポートに支えられながら、前向きにカリキュラムに取り組めています。</p>
@@ -301,11 +347,11 @@
             <h2 class="section-title">作品集</h2>
             <div class="wrapper-collection">
                 <ul class="collection-slider">
-                    <li><img src="img/portfolio1.png" alt=""></li>
-                    <li><img src="img/portfolio2.png" alt=""></li>
-                    <li><img src="img/portfolio3.png" alt=""></li>
-                    <li><img src="img/portfolio4.png" alt=""></li>
-                    <li><img src="img/portfolio4.png" alt=""></li>
+                    <li><img src="img/portfolio1.png" alt="collection1"></li>
+                    <li><img src="img/portfolio2.png" alt="collection2"></li>
+                    <li><img src="img/portfolio3.png" alt="collection3"></li>
+                    <li><img src="img/portfolio4.png" alt="collection4"></li>
+                    <li><img src="img/portfolio5.png" alt="collection5"></li>
                 </ul>
                 <div class="view-more-btn">
                     <a href="https://pronavi-board.noe-p.com/" target="_blank">もっと見る</a>
@@ -314,9 +360,61 @@
         </section>
         <img src="img/wave-bottom.png" alt="" class="wave-bottom">
 
-        
+
         <section class="flow">
             <h2 class="section-title">受講の流れ</h2>
+            <div class="wrapper">
+                <div class="flow-inner">
+                    <div class="flow-items">
+                        <div class="flow-item odd-number">
+                            <img src="img/flow1.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>面談</span>
+                                <span>入校 / 手続き</span>
+                                <span>目標設定</span>
+                            </div>
+                        </div>
+                        <div class="flow-item even-number">
+                            <img src="img/flow2.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>Progate</span>
+                                <span>環境構築</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flow-items">
+                        <div class="flow-item odd-number">
+                            <img src="img/flow3.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>模写コーディング</span> <span>目標設定</span>
+                            </div>
+                        </div>
+                        <div class="flow-item even-number">
+                            <img src="img/flow4.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>WordPress</span>
+                                <span>オリジナルサイト
+                                    制作</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flow-items">
+                        <div class="flow-item odd-number">
+                            <img src="img/flow5.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>案件獲得フェーズ</span>                                <span>目標設定</span>
+                            </div>
+                        </div>
+                        <div class="flow-item even-number">
+                            <img src="img/flow6.png" alt="flow1" class="flow-img">
+                            <div class="flow-text">
+                                <span>案件獲得</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
 
@@ -371,82 +469,11 @@
     </main>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <footer>
     </footer>
 
 
 
-    <!-- プラグイン「slick」のjsを読み込む -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     <script src="js/main.js"></script>
