フッターまで完成

--- a/index.html
+++ b/index.html
@@ -38,13 +38,27 @@
         </div>
         <nav class="header-right">
             <ul>
-                <a href="#プロナビとは"><li>プロナビとは</li></a>
-                <a href="#プロナビの強み"><li>プロナビの強み</li></a>
-                <a href="#受講生の声"><li>受講生の声</li></a>
-                <a href="#受講の流れ"><li>受講の流れ</li></a>
-                <a href="#料金/期間"><li>料金/期間</li></a>
-                <a href="#よくある質問"><li>よくある質問</li></a>
-                <a href="#会社概要"><li>会社概要</li></a>
+                <a href="#プロナビとは">
+                    <li>プロナビとは</li>
+                </a>
+                <a href="#プロナビの強み">
+                    <li>プロナビの強み</li>
+                </a>
+                <a href="#受講生の声">
+                    <li>受講生の声</li>
+                </a>
+                <a href="#受講の流れ">
+                    <li>受講の流れ</li>
+                </a>
+                <a href="#料金/期間">
+                    <li>料金/期間</li>
+                </a>
+                <a href="#よくある質問">
+                    <li>よくある質問</li>
+                </a>
+                <a href="#会社概要">
+                    <li>会社概要</li>
+                </a>
             </ul>
         </nav>
     </header>
@@ -74,18 +88,18 @@
                         </p>
                     </div>
                     <img src="img/about.png" alt="笑顔でパソコンを操作する女性">
-                    </div>
+                </div>
 
-                    <div class="inner">
-                        <img src="img/Pronavi.png" class="back_text" alt="Pronavi">
-                        <div class="emblem-img">
-                            <img src="img/emblem1.png" alt="">
-                            <img src="img/emblem2.png" alt="">
-                            <img src="img/emblem3.png" alt="">
-                            <div class="emblem-text">
-                                <p>信頼の実績が<br>
-                                    あなたの挑戦を支えます</p>
-                            
+                <div class="inner">
+                    <img src="img/Pronavi.png" class="back_text" alt="Pronavi">
+                    <div class="emblem-img">
+                        <img src="img/emblem1.png" alt="">
+                        <img src="img/emblem2.png" alt="">
+                        <img src="img/emblem3.png" alt="">
+                        <div class="emblem-text">
+                            <p>信頼の実績が<br>
+                                あなたの挑戦を支えます</p>
+
                         </div>
                     </div>
 
@@ -393,7 +407,7 @@
                         <div class="flow-item odd-number">
                             <img src="img/flow5.png" alt="flow1" class="flow-img">
                             <div class="flow-text">
-                                <span>案件獲得フェーズ</span>                                <span>目標設定</span>
+                                <span>案件獲得フェーズ</span> <span>目標設定</span>
                             </div>
                         </div>
                         <div class="flow-item even-number">
@@ -404,6 +418,52 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+        </section>
+
+        <section class="step wrapper">
+            <h2 class="section-title">無料カウンセリング</h2>
+
+            <div class="step_text">
+                <p>「どんなスクールなの？」「自分に合うか不安…」<br>
+                    そんな疑問や悩みも、無料カウンセリングで解消できます。</p>
+                <p>経験豊富なカウンセラーが丁寧に対応し、<br>
+                    業界のことから学習の進め方まで詳しくご説明します。</p>
+                <p>安心してご相談いただけるよう、無理な勧誘は一切行っていません。</p>
+            </div>
+
+            <div class="step_img">
+                <img src="img/step1.png" alt="">
+                <img src="img/step2.png" alt="">
+                <img src="img/step3.png" alt="">
+                <img src="img/step4.png" alt="">
+            </div>
+
+            <div class="step-map_img">
+                <img src="img/step-map1.png" class="map-number" alt="">
+                <img src="img/Line.png" class="map-line" alt="">
+                <img src="img/step-map2.png" class="map-number" alt="">
+                <img src="img/Line.png" class="map-line" alt="">
+                <img src="img/step-map3.png" class="map-number" alt="">
+                <img src="img/Line.png" class="map-line" alt="">
+                <img src="img/step-map4.png" class="map-number" alt="">
+            </div>
+
+            <div class="btn-inner">
+                <div id="btn_animation" class="step-btn">
+                    <a href="" class="btn">無料カウンセリングを申し込む</a>
+                </div>
+            </div>
+
+        </section>
+
+        <section id="price" class="price">
+            <h2 class="section-title">料金</h2>
+
+            <div class="price-text">
+                <p>6ヵ月集中プログラム</p>
+                <p><span>総額</span>550,000円<span>（税込）</span></p>
             </div>
 
         </section>
@@ -457,48 +517,95 @@
         </section>
 
 
+
+        <section id="company" class="company">
+            <h2 class="section-title">会社概要</h2>
+
+            <div class="company-inner wrapper">
+                <dl>
+                    <dt>社名</dt>
+                    <dd>株式会社NOE<br>
+                        NOE Co.,Ltd</dd>
+
+                    <dt>所在地</dt>
+                    <dd>&#12306;460-0002<br>
+                        愛知県名古屋市中区丸の内3丁目15-22<br>
+                        丸の内Usビル801号室</dd>
+
+                    <dt>代表者名</dt>
+                    <dd>加藤 大騎</dd>
+
+                    <dt>設立</dt>
+                    <dd>2023年1月26日</dd>
+
+                    <dt>事業内容</dt>
+                    <dd>
+                        <h3>プログラミングスクール事業<br>
+                            システム・アプリ開発</h3>
+                    </dd>
+                </dl>
+
+                <div class="map">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1371.1960754700585!2d136.90359822248058!3d35.17476619000111!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6003712b29048303%3A0x4d32fd4e42e4114d!2z44CSNDYwLTAwMDIg5oSb55-l55yM5ZCN5Y-k5bGL5biC5Lit5Yy65Li444Gu5YaF77yT5LiB55uu77yR77yV4oiS77yS77yS!5e0!3m2!1sja!2sjp!4v1764166024538!5m2!1sja!2sjp"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </section>
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <footer>
+        <div class="footer-box wrapper">
+            <div class="footer-left">
+                <img src="img/logo.png" alt="PRONAVIロゴ">
+                <nav>
+                    <ul>
+                        <a href="#プロナビとは">
+                            <li>プロナビとは</li>
+                        </a>
+                        <a href="#プロナビの強み">
+                            <li>プロナビの強み</li>
+                        </a>
+                        <a href="#受講生の声">
+                            <li>受講生の声</li>
+                        </a>
+                        <a href="#受講の流れ">
+                            <li>受講の流れ</li>
+                        </a>
+                        <a href="#料金/期間">
+                            <li>料金/期間</li>
+                        </a>
+                        <a href="#よくある質問">
+                            <li>よくある質問</li>
+                        </a>
+                        <a href="#会社概要">
+                            <li>会社概要</li>
+                        </a>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="footer-right">
+                <p>各種SNS</p>
+                <div class="container">
+                    <div class="content-1">
+                        <img src="img/Instagram1.png" alt="Instagramアイコン">
+                        <p>かかし</p>
+                    </div>
+                    <div class="content-2">
+                        <img src="img/Instagram2.png" alt="Instagramアイコン">
+                        <p>いるか</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="copyright">
+            <small>&copy; 2025 Jane Doe</small>
+        </div>
     </footer>
-
-
 
     <!-- プラグイン「slick」のjsを読み込む -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
