--- a/shared-parts.html
+++ b/shared-parts.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- セクションタイトル -->
-    <div class="section-title">プロナビとは</div>
+    <h2 class="section-title">プロナビとは</h2>
 
 
 </body>
