--- a/index.html
+++ b/index.html
@@ -55,7 +55,20 @@
 
     </header>
 
+    <div id="fv-animation">
+        <img src="img/logo.png" alt="logo" class="fv-logo">
+        <div class="fv-white"></div>
+    </div>
+
     <main>
+        <div class="mainvisual">
+            <div class="text">
+                <p>変わりたいと<br>
+                思った瞬間が変われるとき。</p>
+            </div>
+            <img src="img/mainvisual.png" alt="mainvisual">
+        </div>
+
         <section id="about" class="about">
             <div class="section-title">
                 <div class="section-title">プロナビとは</div>
@@ -252,9 +265,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
 <!--///// 専用ページ4枚 ここまで /////-->
 <!--///// imgページ2枚 ここから /////-->
                 <div class="page-modal-img" id="page5">
@@ -295,8 +305,6 @@
                         </div>
                     </div>
                 </div>
-                
-                
 <!--///// imgページ2枚 ここまで /////-->
                 <div class="sp-apply">
                     <a href="#" class="contact-btn">無料カウンセリングを申し込む</a>
