--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <header>
         <div class="header-logo">
-            <h1><img src="img/logo.png" alt="PRONAVIロゴ"></h1>
+            <h1><a href="#"><img src="img/logo.png" alt="PRONAVIロゴ"></a></h1>
         </div>
         <nav class="nav-menu">
             <ul>
@@ -65,7 +65,7 @@
         <div class="mainvisual">
             <div class="text">
                 <p>変わりたいと<br>
-                思った瞬間が変われるとき。</p>
+                    思った瞬間が変われるとき。</p>
             </div>
             <img src="img/mainvisual.png" alt="mainvisual">
         </div>
@@ -96,17 +96,19 @@
                     <img src="img/about.png" alt="笑顔でパソコンを操作する女性">
                 </div>
 
-                <div class="inner">
+                <div class="about-inner">
                     <img src="img/Pronavi.png" class="back_text" alt="Pronavi">
-                    <div class="emblem-img">
-                        <img src="img/emblem1.png" alt="">
-                        <img src="img/emblem2.png" alt="">
-                        <img src="img/emblem3.png" alt="">
-                        <div class="emblem-text">
-                            <p>信頼の実績が<br>
-                                あなたの挑戦を支えます</p>
+                    <div class="emblem">
+                        <div class="emblem-img">
+                            <img src="img/emblem1.png" alt="サポート満足度99%">
+                            <img src="img/emblem2.png" alt="挫折率1.3%">
+                            <img src="img/emblem3.png" alt="案件獲得率93%">
                         </div>
-                    </div>        
+                        <div class="emblem-text">
+                            <p><span>信頼の実績が<br>
+                            あなたの挑戦を支えます</span></p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -145,7 +147,7 @@
                         <button class="sp-btn" data-target="page4">詳しく見る→</button>
                     </li>
                 </ul>
-<!--///// 専用ページ4枚 ここから/////-->
+                <!--///// 専用ページ4枚 ここから/////-->
                 <div id="modal-bg"></div>
 
                 <div class="page-modal" id="page1">
@@ -266,8 +268,8 @@
                         </div>
                     </div>
                 </div>
-<!--///// 専用ページ4枚 ここまで /////-->
-<!--///// imgページ2枚 ここから /////-->
+                <!--///// 専用ページ4枚 ここまで /////-->
+                <!--///// imgページ2枚 ここから /////-->
                 <div class="page-modal-img" id="page5">
                     <button class="close-btn">×</button>
                     <p class="number">ex</p>
@@ -306,7 +308,7 @@
                         </div>
                     </div>
                 </div>
-<!--///// imgページ2枚 ここまで /////-->
+                <!--///// imgページ2枚 ここまで /////-->
                 <div class="sp-apply">
                     <a href="#" class="contact-btn">無料カウンセリングを申し込む</a>
                 </div>
@@ -627,7 +629,7 @@
     <footer>
         <div class="footer-box wrapper">
             <div class="footer-left">
-                <img src="img/logo.png" alt="PRONAVIロゴ">
+                <h1><a href="#"><img src="img/logo.png" alt="PRONAVIロゴ"></a></h1>
                 <nav>
                     <ul>
                         <a href="#about">
@@ -659,7 +661,7 @@
                 <p>各種SNS</p>
                 <div class="container">
                     <div class="content-1">
-                        <img src="img/Instagram1.png" alt="Instagramアイコン">
+                        <a href=""></a><img src="img/Instagram1.png" alt="Instagramアイコン">
                         <p>かかし</p>
                     </div>
                     <div class="content-2">
