mainvisual以外修正済み

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </li>
                     <li class="sp-single">
                         <p class="number">04</p>
-                        <p class="text">案件獲得サポート</p>
+                        <p class="text">案件獲得<br>サポート</p>
                         <img src="/img/strong-point4.png" alt="strong-point4">
                         <button class="sp-btn" data-target="page4">詳しく見る→</button>
                     </li>
@@ -169,10 +169,10 @@
                             <p>レッスンの日時は自由に設定でき、日付や時間もあなたの予定に合わせて調整可能です。<br>
                                 固定の曜日や時間に縛られず、柔軟に学習を進められます。</p>
                         </div>
-                        <!-- <div class="small-content">
-                            <h4>タイトル</h4>
-                            <p>テキスト</p>
-                        </div> -->
+                        <div class="small-content">
+                            <h4>画面共有しながら授業</h4>
+                            <p><img src="img/sp-01.png" alt="sp-01"></p>
+                        </div>
                     </div>
                 </div>
                 <div class="page-modal" id="page2">
@@ -240,7 +240,7 @@
                 <div class="page-modal" id="page4">
                     <button class="close-btn">×</button>
                     <p class="number">04</p>
-                    <p class="text">案件獲得サポート</p>
+                    <p class="text">案件獲得<br>サポート</p>
                     <div class="small-page">
                         <div class="small-content">
                             <h4>オリジナルサイト作成</h4>
@@ -296,13 +296,13 @@
                             <img src="img/event1.png" alt="event1">
                         </div>
                         <div class="small-content-img">
-                            <img src="img/event2.png" alt="event2">
+                            <img src="img/event4.png" alt="event4">
                         </div>
                         <div class="small-content-img">
                             <img src="img/event3.png" alt="event3">
                         </div>
                         <div class="small-content-img">
-                            <img src="img/event4.png" alt="event4">
+                            <img src="img/event2.png" alt="event2">
                         </div>
                     </div>
                 </div>
@@ -366,7 +366,7 @@
                         </div>
                     </div>
                     <div class="voice-item">
-                        <img src="img/voice4.png">
+                        <img src="img/voice4_new.jpg">
                         <div class="voice-text">
                             <p>挫折からの再スタート！</p>
                             <div class="voice-info">
